added basic navbar, react-bootstrap, bootstrap

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "gatsby": "^2.26.1",
     "gatsby-plugin-image": "^0.3.1",
     "gatsby-plugin-sharp": "^2.10.1",
     "gatsby-source-filesystem": "^2.7.0",
     "gatsby-transformer-sharp": "^2.8.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1"
   }
 }
