--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "bootstrap": "^4.5.3",
     "gatsby": "^2.30.1",
     "gatsby-plugin-image": "^0.3.1",
+    "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-sharp": "^2.10.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "smooth-scroll": "^16.1.3"
   }
 }
