--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "license": "0BSD",
   "dependencies": {
@@ -31,5 +32,8 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "smooth-scroll": "^16.1.3"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
